1) Refactored - created packages 2) Server now creates a file from the query list.

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,21 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.6.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.1.2</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>ForecastBuster</finalName>
@@ -90,7 +105,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>Main</mainClass>
+                            <mainClass>forecastbuster.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
