--- a/pom.xml
+++ b/pom.xml
@@ -88,10 +88,11 @@
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.3</version>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>forecastbuster.Main</mainClass>
+                            <mainClass>ee.kristjan.ForecastBuster.forecastbuster.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -108,6 +109,7 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 </project>
