--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ee.kristjan.ForecastBuster.forecastbuster.Main</mainClass>
+                            <mainClass>forecastbuster.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -109,7 +109,6 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 </project>
