added observation out file

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,4 @@
-server.port=500
-
 #database config
 database.url=jdbc:postgresql://localhost:5432/postgres
 database.user=postgres
-database.password=postgres
+database.password=kanakala
