--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 #database config
 database.url=jdbc:postgresql://localhost:5432/postgres
 database.user=postgres
-database.password=kanakala
+database.password=postgres
